# invesalius3_nix_develop

./: flake.nix  flake_machnix.nix  pyproject.toml  requirements.txt
.github/workflows/: gen_cachix.yml
