[tool.poetry]
name = "invesalius3_nix_develop"
version = "0.1.0"
description = ""
authors = ["Thiago Franco de Moraes <totonixsame@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Cython = "^3.0.0"
Pillow = "^10.0.0"
PyPubSub = "^4.0.3"
h5py = "^3.9.0"
imageio = "^2.26.0"
nibabel = "^5.0.1"
numpy = "^1.25.0"
psutil = "^5.9.4"
pyserial = "^3.5"
python-gdcm = "^3.0.22"
scikit-image = "^0.20.0"
scipy = "^1.11.1"
vtk = "^9.2.6"
wxPython = "^4.2.1"
torch = "2.0.1"
pyacvd = "^0.2.9"
nvidia-cublas-cu11 = { version = "11.10.3.66", platform = 'linux' }
nvidia-cuda-cupti-cu11 = { version = "11.7.101", platform = 'linux' }
nvidia-cuda-nvrtc-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cuda-runtime-cu11 = { version = "11.7.99", platform = 'linux' }
nvidia-cudnn-cu11 = { version = "8.5.0.96", platform = 'linux' }
nvidia-cufft-cu11 = { version = "10.9.0.58", platform = 'linux' }
nvidia-curand-cu11 = { version = "10.2.10.91", platform = 'linux' }
nvidia-cusolver-cu11 = { version = "11.4.0.1", platform = 'linux' }
nvidia-cusparse-cu11 = { version = "11.7.4.91", platform = 'linux' }
nvidia-nccl-cu11 = { version = "2.14.3", platform = 'linux' }
nvidia-nvtx-cu11 = { version = "11.7.91", platform = 'linux' }
triton = { version = "2.0.0", platform = 'linux' }
pynetdicom = "^2.0.2"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
