[tool.poetry]
name = "invesalius3_nix_develop"
version = "0.1.0"
description = ""
authors = ["Thiago Franco de Moraes <totonixsame@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Cython = "^3.0.4"
Pillow = "^10.0.0"
PyPubSub = "^4.0.3"
h5py = "^3.10.0"
imageio = "^2.31.6"
nibabel = "^5.0.1"
numpy = "^1.26.1"
psutil = "^5.9.4"
pyserial = "^3.5"
python-gdcm = "^3.0.22"
scikit-image = "^0.20.0"
scipy = "^1.11.3"
vtk = "^9.2.6"
wxPython = "^4.2.1"
torch = "2.1.1"
pyacvd = "^0.2.9"
pynetdicom = "^2.0.2"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
